<resources>
    <string name="app_name">GitHubRepoViewer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="darkmode_header">Dark Mode Settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Name</string>
    <string name="github_title">GitHub Account</string>

    <!-- Sync Preferences -->
    <string name="darkmode_title">Dark Mode</string>
    <string name="attachment_title">TBI</string>
    <string name="attachment_summary_on">TBI
    </string>
    <string name="attachment_summary_off">TBI</string>
</resources>